# science4ai

./: .clang-format  .gitignore  .python-version  README.md  meson.build  pyproject.toml
dll/: meson.build
dll/include/: science4ai.h
dll/src/: science4ai.c
science4ai/: __init__.py  meson.build  mod.pyi  scripts.py  version.py
science4ai/mod/: meson.build  mod.c
tests/: test_all.py  test_dll.py  test_ext.py  test_gil.py  test_version.py
